<resources>
    <string name="app_name">InstaClone</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="desciption">Desciption</string>
    <string name="take_picture">Take Picture</string>
    <string name="submit">Submit</string>
    <string name="home">Home</string>
    <string name="compose">Compose</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sample_description">Sample Description</string>
    <string name="sample_username">Sample UserName</string>
</resources>